# YewPar

./: .gitignore  .nfs000000000d005d9d00000175  .nfs000000000d005dab0000012c  :wq  CMakeLists.txt  LICENSE  MaxClique_budget_search_metrics_100.txt  MaxClique_budget_search_metrics_175.txt  MaxClique_budget_search_metrics_250.txt  MaxClique_depthbounded_search_metrics_100.txt  MaxClique_depthbounded_search_metrics_175.txt  MaxClique_depthbounded_search_metrics_250.txt  NS-hivert_budget2_search_metrics_100.txt  NS-hivert_budget2_search_metrics_150.txt  NS-hivert_budget2_search_metrics_200.txt  NS-hivert_budget2_search_metrics_250.txt  NS-hivert_budget_search_metrics_100.txt  NS-hivert_depthbounded_search_metrics_100.txt  README.md  SIP_depthbounded_search_metrics_64.txt  YewPar_env.sh  b400_stack_reg.txt  b401_d.txt  b4_txt  backtracks__maxclique_4004.txt  backtracks__n44shivert.txt  backtracks__nshivert.txt  backtracks_maxclique.txt  backtracks_mc_8004_106.txt  backtracks_mc_8004_107.txt  backtracks_mc_8004_108.txt  backtracks_ns45_106.txt  backtracks_ns45_107.txt  backtracks_ns45_108.txt  backtracks_ns47_106.txt  backtracks_ns47_107.txt  backtracks_ns47_108.txt  backtracks_sip.txt  backtracksbig__maxclique.txt  backtracksbig__maxclique_4004.txt  (+246 more)
Results/: CMakeLists.txt  hostfile.txt  max_clique_scaling_budget_128.txt  max_clique_scaling_budget_256.txt  max_clique_scaling_budget_32.txt  max_clique_scaling_budget_64.txt  max_clique_scaling_depthbounded_17.txt  max_clique_scaling_depthbounded_256.txt  max_clique_scaling_depthbounded_32.txt  max_clique_scaling_depthbounded_64.txt  max_clique_scaling_depthbounded_8.txt  max_clique_scaling_stacksteal_1.txt  max_clique_scaling_stacksteal_2.txt  mc_mp4.txt  mcs_d5_bgt.txt  ns_hivert_budget_17.txt  ns_hivert_budget_17_52.txt  ns_hivert_budget_1_48_metrics.txt  ns_hivert_budget_1_52.txt  ns_hivert_budget_8_52.txt  ns_hivert_stack_steal_17_52.txt  ns_hivert_stack_steal_2.txt  ns_hivert_stack_steal_2_52.txt  process_results.py  rs_mc1.txt  rs_mc2.txt  rs_mc_1.txt  rs_sip_d_6.txt  rs_sip_stack.txt  sip_scaling_budget_1_2000.txt  sip_scaling_depthbounded_1.txt  sip_scaling_depthbounded_1_2000.txt  sip_scaling_depthbounded_2_2000.txt  sip_scaling_stacksteal_1_2000.txt  temp_prob_1.txt  temp_prob_3.txt  temp_prob_5.txt
Results/Budget/: ns_46___1.txt  ns_46___2.txt  ns_46___4.txt  ns_46___8.txt  ns_46_nodes_cost_1.txt  ns_46_nodes_cost_2.txt  ns_46_nodes_cost_4.txt  ns_46_nodes_cost_8.txt  ns_47_1.txt  ns_47_2.txt  ns_47_4.txt  ns_47_8.txt  ns_47___1.txt  ns_47___2.txt  ns_47___4.txt  ns_47___8.txt  ns_47_nodes_cost_1.txt  ns_47_nodes_cost_2.txt  ns_47_nodes_cost_4.txt  ns_47_nodes_cost_8.txt
Results/Depthbounded/: b400_1__1.txt  b400_1__2.txt  b400_1__4.txt  b400_1__8.txt  b400_2___1.txt  b400_2___2.txt  b400_2___4.txt  b400_2___8.txt  b800_4_1.txt  b800_4_2.txt  b800_4_4.txt  b800_4_8.txt  b800_4_nodes_cost_1.txt  b800_4_nodes_cost_2.txt  b800_4_nodes_cost_4.txt  b800_4_nodes_cost_8.txt  hat700_4_nodes_cost_1.txt  hat700_4_nodes_cost_2.txt  hat700_4_nodes_cost_4.txt  hat700_4_nodes_cost_8.txt
Results/StackSteal/: sip_g34_g79__1.txt  sip_g34_g79__2.txt  sip_g34_g79__4.txt  sip_g34_g79__8.txt
Results/results/: .nfs0000000000e80c9900000154  SIP_budget_search_metrics_32.txt  SIP_depthbounded_search_metrics_32.txt  SIP_stacksteal_search_metrics_50.txt
lib/: CMakeLists.txt  YewPar.cpp  YewPar.hpp
lib/bnb/: CMakeLists.txt  bnb-decision-dist.hpp  bnb-decision-par.hpp  (+13 more)
(+3852 files in other folders)
